# composio-toolkit-ops-agent

./: .dockerignore  .env.example  .env.production.example  .gitignore  .secrets.baseline  AGENTS.md  DECISIONS.md  DEMO_RUNBOOK.md  DEPLOY_DIGITALOCEAN.md  Dockerfile  Dockerfile.api  KIRO_SETUP.md  MANIFEST.txt  Makefile  PLAN.md  README.md  compose.prod.yaml  compose.yaml  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements-providers.txt  requirements.txt  streamlit_app.py
api/: __init__.py  app.py  assignment_live_bootstrap.py  assignment_live_evidence.py  assignment_projection.py  assignment_runtime.py  main.py  models.py  service.py
deploy/: Caddyfile
docs/: LIVE_10_APP_MATRIX.md  LIVE_EVIDENCE_CHECKLIST.md  live-10-app-matrix.json
fixtures/: README.md
ops/: __init__.py  browser_api_trace_catalog.py  browser_api_traces.json  browser_host_policy.py  browser_link_log.py  browser_worker.py  cli.py  composio_capability.py  config.py  credential_capture.py  credential_capture_specs.py  credential_validator 2.py  credential_validator.py  developer_app_worker.py  effect_ledger 2.py  effect_ledger.py  email_ai.py  gmail_worker.py  graph 2.py  graph.py  integrator.py  models.py  network_endpoint_policy.py  operational_research 2.py  operational_research.py  outreach.py  p1_adapter.py  private_files.py  provider_errors.py  redaction.py  reply_classifier.py  routing.py  run_service.py  secret_store.py  state.py  storage.py
prompts/: browser_onboarding.md  browser_resume.md  operational_enrichment.system.md  operational_enrichment.user.md  (+5 more)
(+144 files in other folders)
