[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "composio-toolkit-ops-agent"
version = "0.1.0"
description = "Secure P2 operations foundation for the Composio toolkit research pipeline."
readme = "README.md"
requires-python = ">=3.11,<3.12"

[tool.setuptools.packages.find]
include = ["api*", "ops*"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "live: opt-in test that may call a configured external provider or perform a controlled side effect",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
exclude = ["^fixtures/"]
